--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h2>Температура по Цельсию</h2>
-    <input type="text" id="#tempC"/>
+    <input type="text" id="#temperatureC"/>
     <br>
     <br>
-    <input type="button" value="Перевести" onclick="convertTemp()"/>
+    <input type="button" value="Перевести" onclick="convertTemperature()"/>
     <h2>Температура по Фаренгейту</h2>
-    <input type="text" id="#tempF"/>
+    <input type="text" id="#temperatureF"/>
 </body>
 </html>
