--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
-    <script type="text/javascript" src="js/script.js"> </script>
+    <link rel="stylesheet" href="style.css">
+    <script src="js/main.js" defer></script>
+    <title>Shop</title>
 </head>
 <body>
-    <h2>Температура по Цельсию</h2>
-    <input type="text" id="#temperatureC"/>
-    <br>
-    <br>
-    <input type="button" value="Перевести" onclick="convertTemperature()"/>
-    <h2>Температура по Фаренгейту</h2>
-    <input type="text" id="#temperatureF"/>
+<div class="container">
+    <div class="header">
+        <button class="btn-cart" type="button">Корзина</button>
+    </div>
+    <div class="content">
+        <div class="products">
+        </div>
+    </div>
+    <div class="footer">&copy;Все права защищены</div>
+</div>
 </body>
 </html>
